<resources>
    <string name="app_name">Calculadora TP05</string>

    <!-- Button label for add operation -->
    <string name="texteDeAdição">Add</string>

    <!-- Button label for subtract operation -->
    <string name="texteDeSubtração">Sub</string>

    <!-- Button label for divide operation -->
    <string name="texteDeDivisão">Div</string>

    <!-- Button label for mul operation -->
    <string name="texteDeMultiplicação">Mul</string>

    <!-- Message for textview in case of errors  -->
    <string name="mensagemDeErro">Error</string>
    <string name="_0">0</string>
    <string name="clear">AC</string>
    <string name="porcent">%</string>
    <string name="div">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="mult">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="sub">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="add">+</string>
    <string name="_3">3</string>
    <string name="resposta">0</string>
    <string name="ponto">.</string>
    <string name="ponto_content">Ponto</string>
    <string name="backspace_content">Botão de Excluir um item</string>
    <string name="clear_content">Limpar memória</string>
    <string name="decimal_content">Transformar em decimal</string>
    <string name="operador_de_divisao_content">Operador de divisão</string>
    <string name="operador_de_multiplicacao_content">Operador de multiplicação</string>
    <string name="operador_de_subtracao_content">Operador de subtração</string>
    <string name="operador_de_soma_content">Operador de soma</string>
    <string name="trocar_tela_content">Trocar tela</string>
    <string name="sinal_de_igual_content">Sinal de igual</string>
    <string name="equal">=</string>

</resources>