<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvExpressao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text=""
                android:textColor="@color/gray"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:maxLength="24"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/resposta"
                android:textColor="@color/white"
                android:textSize="60sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginHorizontal="8dp"
                android:background="@color/darkgray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_limpar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/clear_content"
                android:text="@string/clear"
                android:textColor="@color/orange"
                android:textSize="28sp" />

            <ImageButton
                android:id="@+id/btn_backspace"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/backspace_content"
                android:src="@drawable/ic_back" />


            <Button
                android:id="@+id/btn_divisao"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/operador_de_divisao_content"
                android:text="@string/div"
                android:textColor="@color/orange"
                android:textSize="28sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/_7"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btn8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/_8"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btn9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/_9"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btn_multiplicacao"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/operador_de_multiplicacao_content"
                android:text="@string/mult"
                android:textColor="@color/orange"
                android:textSize="28sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/_4"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btn5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/_5"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btn6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/_6"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btn_subtracao"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/operador_de_subtracao_content"
                android:text="@string/sub"
                android:textColor="@color/orange"
                android:textSize="28sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/_1"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btn2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/_2"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btn3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/_3"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btn_soma"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/operador_de_soma_content"
                android:text="@string/add"
                android:textColor="@color/orange"
                android:textSize="28sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_ponto"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/ponto_content"
                android:text="@string/ponto"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btn0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/_0"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="28sp"
                tools:ignore="DuplicateSpeakableTextCheck" />


            <Button
                android:id="@+id/btn_igual"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="@color/darkorange"
                android:contentDescription="@string/sinal_de_igual_content"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
